# WinRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: load_cicids.ipynb  preprocess_cicids.ipynb
src/: build_index.py  evaluate.py  llm_engine.py  main.py  orchestrator.py  prepare_data.py  retriever.py
src/winrag/: __init__.py
